Project

General

Profile

Actions

Bug #39665

closed

kstore: memory may leak on KStore::_do_read_stripe

Added by Shanchun Lv almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

On testing kstore, we found that memory leaks when execute read ops. The root cause is when execute read ops, the in-flight stripes will be cached in memory, but won't be cleared. Actually, there is no need to cache the in-flight stripes on read process, we can just discard it on read ops. The appendix is the related heap dump file.


Files

osd0-heap-dump.png (53.2 KB) osd0-heap-dump.png Shanchun Lv, 05/10/2019 08:29 AM
Actions #2

Updated by Neha Ojha almost 5 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Kefu Chai over 4 years ago

  • Status changed from Fix Under Review to Resolved
  • Assignee set to Chang Liu
  • Pull request ID set to 32538
Actions

Also available in: Atom PDF