os/kstore: do not cache in-fight stripes on read ops to avoid memory leaks

Fixes: http://tracker.ceph.com/issues/39665

Signed-off-by: Chang Liu <liuchang0812@gmail.com>
Signed-off-by: lvshanchun lvshanchun@gmail.com